--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "COMP426 A3",
   "main": "./lib/roll.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node bin/cli.js --side=10 --dice=2 --rolls=3"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/comp426-2022-fall/a03-bhavithmanapoty.git"
   },
+  "type": "module",
   "author": "@bhavithmanapoty",
-  "license": "GPL-3.0-or-later",
+  "bin": {
+    "roll-dice": "./bin/cli.js"
+  },
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/comp426-2022-fall/a03-bhavithmanapoty/issues"
   },
-  "homepage": "https://github.com/comp426-2022-fall/a03-bhavithmanapoty#readme"
+  "homepage": "https://github.com/comp426-2022-fall/a03-bhavithmanapoty#readme",
+  "dependencies": {
+    "mathjs": "^11.4.0",
+    "minimist": "^1.2.7"
+  }
 }
